<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:targetApi="o">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:outlineAmbientShadowColor="#000"
            tools:targetApi="p">

            <TextView
                android:id="@+id/toolbar_text"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/houndtim"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="MissingPrefix"
                tools:text="Peduli Sekitar" />



        </android.support.v7.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible"
                        tools:ignore="UselessParent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/user2"
                            tools:ignore="ContentDescription" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/loginorregister"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity=""
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/houndtim"
                                android:text="@string/log_in_or_register"
                                android:textColor="#000"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:fontFamily="@font/houndtim"
                                android:text="@string/silahkan_login_untuk_mengakses_fitur_lebih_banyak"
                                android:textSize="13sp"
                                tools:ignore="SmallSp,MissingPrefix" />


                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000"
                    android:visibility="visible" />

                <!--event recommended -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="13dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/houndtim"
                        android:text="@string/event_recommended"
                        android:textColor="#000"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        tools:ignore="MissingPrefix" />
                </LinearLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="5dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:id="@+id/cv_event"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:background="@color/bgcardview">

                            <ImageView
                                android:id="@+id/iv_cardview"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/bgcardview"
                                tools:ignore="ContentDescription" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tv_judul_cardview"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="70dp"
                                    android:padding="2dp"
                                    android:text="@string/judul"
                                    android:textColor="#fff"
                                    android:textSize="8sp"
                                    android:textStyle="bold"
                                    tools:ignore="SmallSp" />

                                <TextView
                                    android:id="@+id/tv_tgl_cardview"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="2dp"
                                    android:text="@string/tanggal"
                                    android:textColor="#fff"
                                    android:textSize="8sp"
                                    android:textStyle="bold"
                                    tools:ignore="SmallSp" />

                                <TextView
                                    android:id="@+id/tv_yayasan_cardview"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="2dp"
                                    android:text="@string/yayasan"
                                    android:textColor="#fff"
                                    android:textSize="8sp"
                                    android:textStyle="bold"
                                    tools:ignore="SmallSp" />
                            </LinearLayout>


                        </android.support.v7.widget.CardView>

                    </LinearLayout>
                </HorizontalScrollView>

                <!--event baru-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="13dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/houndtim"
                        android:text="@string/event_baru"
                        android:textColor="#000"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="10dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.CardView
                            android:id="@+id/cv_event_2"
                            android:layout_width="120dp"
                            android:layout_height="120dp">

                            <ImageView
                                android:id="@+id/iv_cardview_2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/bgcardview"
                                tools:ignore="ContentDescription" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tv_judul_cardview2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="80dp"
                                    android:fontFamily="@font/houndtim"
                                    android:padding="2dp"
                                    android:text="@string/judul"
                                    android:textColor="#fff"
                                    android:textSize="8sp"
                                    android:textStyle="bold"
                                    tools:ignore="SmallSp" />

                                <TextView
                                    android:id="@+id/tv_tgl_cardview2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/houndtim"
                                    android:padding="2dp"
                                    android:text="@string/tanggal"
                                    android:textColor="#fff"
                                    android:textSize="8sp"
                                    android:textStyle="bold"
                                    tools:ignore="SmallSp" />

                                <TextView
                                    android:id="@+id/tv_yayasan_cardview2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/houndtim"
                                    android:padding="2dp"
                                    android:text="@string/yayasan"
                                    android:textColor="#fff"
                                    android:textSize="8sp"
                                    android:textStyle="bold"
                                    tools:ignore="MissingPrefix,SmallSp" />
                            </LinearLayout>


                        </android.support.v7.widget.CardView>
                    </LinearLayout>
                </HorizontalScrollView>

                <!--Kebutuhan-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="13dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/houndtim"
                        android:text="@string/kebutuhan"
                        android:textColor="#000"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        tools:ignore="MissingPrefix" />

                </LinearLayout>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="70dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="5dp"
                        android:orientation="horizontal">


                        <android.support.v7.widget.CardView
                            android:id="@+id/cv_makanan"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginRight="20dp">

                            <ImageView
                                android:id="@+id/iv_makanan"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/bgcardview"
                                tools:ignore="ContentDescription" />

                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:id="@+id/cv_baju"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginRight="20dp">

                            <ImageView
                                android:id="@+id/iv_baju"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/bgcardview"
                                tools:ignore="ContentDescription" />

                        </android.support.v7.widget.CardView>


                        <android.support.v7.widget.CardView
                            android:id="@+id/cv_uang"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginRight="20dp">

                            <ImageView
                                android:id="@+id/iv_uang"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/bgcardview"
                                tools:ignore="ContentDescription" />

                        </android.support.v7.widget.CardView>

                        <android.support.v7.widget.CardView
                            android:id="@+id/cv_jasa"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginRight="20dp">

                            <ImageView
                                android:id="@+id/iv_jasa"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/bgcardview"
                                tools:ignore="ContentDescription" />

                        </android.support.v7.widget.CardView>


                    </LinearLayout>

                </HorizontalScrollView>


            </LinearLayout>


        </ScrollView>
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bn_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="#fff"
        app:itemIconTint="@drawable/state_bnve"
        app:itemTextColor="@drawable/state_bnve"
        app:menu="@menu/menu_item"
        tools:ignore="MissingPrefix" />
</RelativeLayout>

